--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
 	<style>
-		
+
 	</style>
 </head>
 
@@ -35,6 +35,9 @@
 		<div class="c50"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9645927126667!2d-74.0137179487039!3d40.71879594503453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1e7e56a86f%3A0x69339e9ddf4f987a!2sBorough%20of%20Manhattan%20Community%20College!5e0!3m2!1sen!2sus!4v1573838487385!5m2!1sen!2sus" width="100%" height="450" frameborder="0" style="border:0: " allowfullscreen=""></iframe></div>
 		<div class="c50 p10">
 			<form class="formcontact">
+				<div class="container p5 sper">
+					<h1><img src="assets/img/jiang_contact.svg" class="pagetitle"></h1>
+				</div>
 				<lable>
 					Name<br>
 					<input type="text" name="fn">
@@ -55,6 +58,4 @@
 	<footer>
 		<p class="tc a1 p5">&copy; 2019 All Right Reserved.</p>
 	</footer>
-</body>
-
-</html>
+</body></html>
