mobile site added

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Leping Jiang</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
 <body>
 	<header>
 		<h1><a href="index.html" id="logo"><img src="assets/img/leping_jiang_logo.png"></a></h1>
-		<button id="mb">mobile menu</button>
+		<button id="mb"><i class="fa fa-bars"></i></button>
 		<nav>
 			<ul>
 				<li>
